fixed login appearance on mobile

--- a/style.css
+++ b/style.css
@@ -290,7 +290,7 @@ background-clip: text;
 #pass-help,
 #email-help,
 #passc-help {
-  margin-top: 2px;
+  margin-top: 0.11em;
   color: #cc0000;
   width: 25em;
   font-weight:bold;
@@ -300,6 +300,7 @@ background-clip: text;
   width: 30em;
   height: 25em;
   margin: 0 auto;
+  margin-top: 16em;
   border-radius: 1em;
   background-color: #2c3134;
   color: black;
@@ -344,13 +345,14 @@ background-clip: text;
 }
 
 .form-control {
-  height: 25px;
-  padding-top: 15px;
+  height: 1.85em;
+  padding-top: 1.15em;
   border:none;
-  border-bottom: 2px solid #cc0000;
+  border-bottom: 0.2em solid #cc0000;
   border-image: linear-gradient(to right,#000,#cc0000) 1;
   background-color: #2c3134;
   font-weight: 900;
+  width: 14.7em;
 }
 
 input.form-control
@@ -519,11 +521,6 @@ input.form-control
   100% {
     transform: scale(1);
   }
-}
-
-html,
-body {
-  height: 100%;
 }
 
 html {
